[tool.poetry]
name = "flask-admin-bs4-modal-issue"
version = "0.1.0"
description = ""
authors = ["ilias <irtimirbulatov@gmail.com>"]
readme = "README.md"
packages = [{include = "flask_admin_bs4_modal_issue"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
flask-sqlalchemy = "^3.1.1"
flask-admin = "^1.6.1"
alembic = "^1.13.0"
flask-migrate = "^4.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
